Overflow bug fixed and dynamic textarea available

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -82,8 +82,20 @@ form label {
   transform: translateY(-2px); 
 }
 
-form input[type="text"],
+form input{
+  width: 80%;
+  padding: 0.75em;
+  margin: 20px;
+  margin-top: 0.5em;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  font-size: 1em;
+  min-height: 3rem;
+}
 form textarea {
+  min-height: 6rem;
+  overflow-y: hidden; 
+  resize: none;
   width: 80%;
   padding: 0.75em;
   margin: 20px;
@@ -129,6 +141,7 @@ article h3 {
   margin-bottom: 1rem;
   font-size: 1.75rem;
   color: #0077b6;
+  word-wrap: break-word;
 }
 
 article h3 a {
@@ -145,6 +158,7 @@ article p {
   font-size: 1.1rem;
   color: #555;
   line-height: 1.6;
+  word-wrap: break-word;
 }
 
 
@@ -153,8 +167,14 @@ h2 {
   font-size: 2.5rem;
   margin-bottom: 1.5rem;
   color: #333;
+  word-wrap: break-word;
 }
 
+#Detail-p{
+  font-size: 1.1rem;
+  line-height: 1.6;
+  word-wrap: break-word;
+}
 
 .Ed {
   text-decoration: none;
